--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,9 @@
 # BEGIN Expire headers
 ExpiresActive On
-ExpiresDefault "access plus 1 seconds"
-ExpiresByType image/jpeg "access plus 2592000 seconds"
-ExpiresByType text/css "access plus 604800 seconds"
-ExpiresByType text/javascript "access plus 604800 seconds"
-ExpiresByType application/javascript "access plus 604800 seconds"
-ExpiresByType text/html "access plus 2592000 seconds"
+ExpiresDefault "access plus 1 day"
+ExpiresByType image/jpeg "access plus 1 day"
+ExpiresByType text/css "access plus 1 day"
+ExpiresByType text/javascript "access plus 1 day"
+ExpiresByType application/javascript "access plus 1 day"
+ExpiresByType text/html "access plus 1 day"
 # END Expire headers
