--- a/.htaccess
+++ b/.htaccess
@@ -2,8 +2,13 @@
 ExpiresActive On
 ExpiresDefault "access plus 1 day"
 ExpiresByType image/jpeg "access plus 1 day"
+ExpiresByType image/jpg "access plus 1 day"
+ExpiresByType image/png "access plus 1 day"
 ExpiresByType text/css "access plus 1 day"
 ExpiresByType text/javascript "access plus 1 day"
+ExpiresByType text/js "access plus 1 day"
 ExpiresByType application/javascript "access plus 1 day"
+ExpiresByType application/pdf "access plus 1 day"
+ExpiresByType application/x-shockwave-flash "access plus 1 day"
 ExpiresByType text/html "access plus 1 day"
 # END Expire headers
